Mesa creada con métodos para colocar cartas y mostar info de mesa