@@ -1,6 +1,6 @@
 package es.uvigo.esei.aed1.core;
 
-import java.util.ArrayDeque;
+import java.util.ArrayList;
 
 /**
  * Representa a un jugador, identificado por el nombre y sus cartas de la mano
@@ -11,15 +11,19 @@ import java.util.ArrayDeque;
  */
 public class Jugador {
     private String nombre;
-    private ArrayDeque<Carta> mano;
+    private ArrayList<Carta> mano;
     
     public String getNombre() {
         return nombre;
     }
+    
+    public ArrayList<Carta> getMano() {
+        return mano;
+    }
 
     public Jugador(String nombre) {
         this.nombre = nombre;
-        mano = new ArrayDeque<>();
+        mano = new ArrayList<>();
     }
     
     public void cogerCarta(Carta c) {
@@ -28,11 +32,12 @@ public class Jugador {
 
     public String toString(int numero) {
         StringBuilder sb = new StringBuilder();
-        for (Carta c : mano) {
-            sb.append(c);
-            if(!c.equals(mano.getLast())) {
-                sb.append(" | ");
-            }
+        for (int i = 0; i < mano.size() - 1; i++) {
+            sb.append(mano.get(i));
+            sb.append(" | ");
+        }
+        if(!mano.isEmpty()) {
+            sb.append(mano.get(mano.size() - 1));
         }
         
         return sb.toString();
